Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignNumberUndefined.quorum
Number x = undefined
number i = cast(number, x)